--- a/config/default.yml
+++ b/config/default.yml
@@ -1,1 +1,8 @@
-name: "Amir Bahador"
+uvicorn:
+  host: "0.0.0.0"
+  port: 8000
+  reload: False
+  log_level: "debug"
+  workers: 1
+  limit_concurrency: 7
+  limit_max_requests: 50
