--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "memoization>=0.4.0",
     "omegaconf>=2.3.0",
+    "uvicorn>=0.27.1",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
