--- a/config/default.yml
+++ b/config/default.yml
@@ -1,3 +1,5 @@
+app_env: "${oc.env:APP_ENV, ''}"
+
 uvicorn:
   host: "0.0.0.0"
   port: 8000
@@ -11,5 +13,6 @@ redis:
   host: "localhost"
   port: 6379
   db: 0
+  decode_responses: True
 
 email: "amirbahador.develop@gmail.com"
