--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "omegaconf>=2.3.0",
     "uvicorn>=0.27.1",
     "dependency-injector>=4.41.0",
+    "sentence-transformers>=2.5.1",
+    "faiss-cpu>=1.8.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
@@ -25,4 +27,6 @@ distribution = false
 
 
 [tool.pdm.scripts]
-start = "python src/main.py"
+start.cmd = "python src/main.py"
+consume.cmd = "python src/main.py"
+consume.env = {APP_ENV="consumer"}
