--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "dependency-injector>=4.41.0",
     "sentence-transformers>=2.5.1",
     "faiss-cpu>=1.8.0",
+    "strawberry-graphql>=0.219.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
